sugar-toolkit (0.81.8-1) UNRELEASED; urgency=low

  * New upstream release.
  * Drop patch 0001 now included upstream.
  * Unfuzz patches 2002 and 2991.
  * Update local cdbs snippets:
    + Minor improvements to local makefile* and autotools* snippets.
    + Minor improvements to copyright-check.mk.
    + Add new local package-relations.mk to merge duplicate
      build-dependencies and more.  Drop cleanup in debian/rules.
    + Update README.cdbs-tweaks.
  * Update debian/copyright (bump autotools copyright years).  Update
    copyright hints.

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 07 Aug 2008 04:44:34 +0200

sugar-toolkit (0.81.6-2) unstable; urgency=medium

  * Add patch 1003 to nest try-except in try-except-finally construct,
    for Python < 2.5 compatibility.
  * Keep urgency=high to still attempt reaching Lenny before freezing.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 15 Jul 2008 10:13:43 +0200

sugar-toolkit (0.81.6-1) unstable; urgency=medium

  * New upstream release.
  * Drop patch 1002 and 2992 (gettext rename fixed upstream now).
  * Update patch 2991 (other translations added now, that danish needs
    to merge with).
  * Restructure output of copyright-check.mk to match new proposed
    copyright-format at
    http://wiki.debian.org/Proposals/CopyrightFormat .
  * Adjust debian/copyright to follow new proposed copyright-format.
  * Add patch 0001 from upstream Git to fix crash in get_joined_buddies
    when a buddy disappears uncleanly.
  * Add patch 1002 to fix function `gsm_xsmp_init' implicitly converted
    to pointer.  Closes: bug#489817, thanks to Dann Frazier.
  * Set urgency=medium to hopefully reach Lenny before freezing.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 14 Jul 2008 14:44:57 +0200

sugar-toolkit (0.81.5-1) unstable; urgency=low

  * New upstream release.
  * Rewrite patch 2002 (ignore debian subdir and .pc quilt subdir) and
    unfuzz patch 1002.
  * Update local cdbs snippets: