@@ -1,98 +1,158 @@
 diff --git a/po/da.po b/po/da.po
 new file mode 100644
-index 0000000..e1bb032
+index 0000000..2a4dcbd
 --- /dev/null
 +++ b/po/da.po
-@@ -0,0 +1,92 @@
-+# Translation into danish of Sugar
-+# Copyright (C) 2008 Jonas Smedegaard
-+# This file is distributed under the same license as the Sugar package.
+@@ -0,0 +1,152 @@
++# Danish translations for sugar-toolkit
++# Copyright (C) 2008 Jonas Smedegaard <dr@jones.dk>
++# This file is distributed under the same license as the sugar-toolkit package.
 +# Jonas Smedegaard <dr@jones.dk>, 2008.
 +#
-+#, fuzzy
 +msgid ""
 +msgstr ""
-+"Project-Id-Version: Sugar 0.79.0\n"
-+"Report-Msgid-Bugs-To: \n"
-+"POT-Creation-Date: 2008-04-19 02:45+0200\n"
-+"PO-Revision-Date: 2008-04-19 02:45+0200\n"
++"Project-Id-Version: sugar-toolkit 0.81.8\n"
++"POT-Creation-Date: 2008-08-07 05:10+0200\n"
++"PO-Revision-Date: 2008-08-07 05:14+0200\n"
 +"Last-Translator: Jonas Smedegaard <dr@jones.dk>\n"
-+"Language-Team: LANGUAGE <LL@li.org>\n"
++"Language-Team: None\n"
 +"MIME-Version: 1.0\n"
 +"Content-Type: text/plain; charset=UTF-8\n"
 +"Content-Transfer-Encoding: 8bit\n"
++"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:123
++#: ../src/sugar/activity/activity.py:124
 +msgid "Share with:"
 +msgstr "Del med:"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:125
++#: ../src/sugar/activity/activity.py:126
 +msgid "Private"
 +msgstr "Privat"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:126
++#: ../src/sugar/activity/activity.py:127
 +msgid "My Neighborhood"
 +msgstr "Mit nabolag"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:133
++#: ../src/sugar/activity/activity.py:134
 +msgid "Keep"
 +msgstr "Behold"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:139
++#: ../src/sugar/activity/activity.py:144
 +msgid "Stop"
 +msgstr "Stop"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:253
++#: ../src/sugar/activity/activity.py:259
 +msgid "Undo"
 +msgstr "Fortryd"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:258
++#: ../src/sugar/activity/activity.py:264
 +msgid "Redo"
 +msgstr "Gentag"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:268
++#: ../src/sugar/activity/activity.py:274
 +msgid "Copy"
 +msgstr "Kopiér"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:273
++#: ../src/sugar/activity/activity.py:279
 +msgid "Paste"
 +msgstr "Sæt ind"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:299
++#: ../src/sugar/activity/activity.py:305
 +msgid "Activity"
 +msgstr "Aktivitet"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:465
++#: ../src/sugar/activity/activity.py:509
 +#, python-format
 +msgid "%s Activity"
 +msgstr "%s aktivitet"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:835
++#: ../src/sugar/activity/activity.py:874
 +msgid "Keep error"
 +msgstr "Beholdefejl"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:836
++#: ../src/sugar/activity/activity.py:875
 +msgid "Keep error: all changes will be lost"
 +msgstr "Beholdefejl: alle ændringer går tabt"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:839
++#: ../src/sugar/activity/activity.py:878
 +msgid "Don't stop"
 +msgstr "Stop ikke"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/activity/activity.py:842
++#: ../src/sugar/activity/activity.py:881
 +msgid "Stop anyway"
 +msgstr "Stop alligevel"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/graphics/alert.py:166
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/graphics/alert.py:209
++#: ../src/sugar/graphics/alert.py:166 ../src/sugar/graphics/alert.py:209
 +msgid "Cancel"
 +msgstr "Afbryd"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/graphics/alert.py:170
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/graphics/alert.py:247
++#: ../src/sugar/graphics/alert.py:170 ../src/sugar/graphics/alert.py:247
 +msgid "Ok"
 +msgstr "Ok"
 +
-+#: /home/jonas/src/GITauth/collab-maint/sugar-toolkit/./po/../sugar/graphics/alert.py:219
++#: ../src/sugar/graphics/alert.py:219
 +msgid "Continue"
 +msgstr "Fortsæt"
++
++#: ../src/sugar/util.py:181
++msgid " and "
++msgstr " og "
++
++#: ../src/sugar/util.py:182
++msgid ", "
++msgstr ", "
++
++#. TRANS: Indicating something that just happened, eg. "just now", "moments ago"
++#: ../src/sugar/util.py:185
++msgid "Seconds ago"
++msgstr "sekunder siden"
++
++#. TRANS: Indicating time passed, eg. "[10 day, 5 hours] ago",
++#. "[2 minutes] in the past", or "[3 years, 1 month] earlier"
++#: ../src/sugar/util.py:189
++#, python-format
++msgid "%s ago"
++msgstr "%s siden"
++
++#. TRANS: Relative dates (eg. 1 month and 5 days).
++#: ../src/sugar/util.py:202
++#, python-format
++msgid "%d year"
++msgid_plural "%d years"
++msgstr[0] "%d år"
++msgstr[1] "%d år"
++
++#: ../src/sugar/util.py:203
++#, python-format
++msgid "%d month"
++msgid_plural "%d months"
++msgstr[0] "%d måned"
++msgstr[1] "%d måneder"
++
++#: ../src/sugar/util.py:204
++#, python-format
++msgid "%d week"
++msgid_plural "%d weeks"
++msgstr[0] "%d uge"
++msgstr[1] "%d uger"
++
++#: ../src/sugar/util.py:205
++#, python-format
++msgid "%d day"
++msgid_plural "%d days"
++msgstr[0] "%d dag"
++msgstr[1] "%d dage"
++
++#: ../src/sugar/util.py:206
++#, python-format
++msgid "%d hour"
++msgid_plural "%d hours"
++msgstr[0] "%d time"
++msgstr[1] "%d timer"
++
++#: ../src/sugar/util.py:207
++#, python-format
++msgid "%d minute"
++msgid_plural "%d minutes"
++msgstr[0] "%d minut"
++msgstr[1] "%d minutter"
